css/style.css
/* ... */
/*******************************/
/*********** Team CSS **********/
/*******************************/
.team {
  position: relative;
  width: 100%;
  padding: 45px 0 15px 0;
}

.team .team-item {
  position: relative;
  background: #ffffff;
  margin-bottom: 30px;
  display: flex;
  align-items: center;
  justify-content: flex-start;
  box-shadow: inset 0 0 0 0 transparent;
  transition: ease-out 0.5s;
}

.team .team-img {
  position: relative;
  width: 50%;
  overflow: hidden;
}

.team .team-img img {
  position: relative;
  width: 100%;
  transition: 0.5s;
}

.team .team-text {
  position: relative;
  width: 50%;
  padding: 0 30px;
}

.team .team-text h2 {
  color: #1c3448;
  font-size: 18px;
  font-weight: 600;
  margin-bottom: 5px;
  transition: 1s;
}

.team .team-text h4 {
  font-size: 14px;
  font-weight: 600;
  margin-bottom: 15px;
  transition: 1s;
}

.team .team-text p {
  margin-bottom: 20px;
  transition: 1s;
}

.team .team-social {
  position: relative;
  display: flex;
  align-items: center;
  justify-content: flex-start;
}

.team .team-social a.btn {
  width: 35px;
  height: 35px;
  padding: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 14px;
  font-weight: normal;
  margin-right: 5px;
}

.team .team-item:hover {
  box-shadow: inset 800px 0 0 0 #1c3448;
}

.team .team-item:hover .team-img img {
  transform: scale(1.2);
}

.team .team-item:hover .team-text h2,
.team .team-item:hover .team-text h4,
.team .team-item:hover .team-text p {
  color: #ffffff;
}

.team .team-item:hover .team-social a.btn {
  background: #ffffff;
}

.team .team-item:hover .team-social a.btn:hover {
  border-color: #ffffff;
}

@media (max-width: 575.98px) {
  .team .team-text {
    padding: 0 15px;
  }

  .team .team-text h2 {
    font-size: 16px;
    margin-bottom: 0;
  }

  .team .team-text h4 {
    margin-bottom: 5px;
  }

  .team .team-text p {
    font-size: 14px;
    line-height: 18px;
    margin-bottom: 10px;
  }
}

/*******************************/
/******* Testimonial CSS *******/
/*******************************/
.testimonial {
  position: relative;
  margin: 45px 0;
  padding: 90px 0;
  background: #1c3448;
}

.testimonial .container {
  max-width: 900px;
}

.testimonial .testimonial-icon {
  margin-bottom: 45px;
  text-align: center;
}

.testimonial .testimonial-icon i {
  font-size: 60px;
  color: rgba(256, 256, 256, 0.5);
}

.testimonial .testimonial-item {
  position: relative;
  margin: 0 15px;
  text-align: center;
}

.testimonial .testimonial-img {
  position: relative;
  margin-bottom: 15px;
  z-index: 1;
}

.testimonial .testimonial-item img {
  margin: 0 auto;
  width: 120px;
  padding: 10px;
  border: 5px dotted #ffffff;
  border-radius: 100px;
}

.testimonial .testimonial-text {
  position: relative;
  margin-top: -70px;
  padding: 65px 35px 30px 35px;
  text-align: center;
  background: #ffffff;
  border-radius: 500px;
}

.testimonial .testimonial-item p {
  font-size: 18px;
  font-style: italic;
}

.testimonial .testimonial-text h3 {
  color: #ef233c;
  font-size: 18px;
  font-weight: 600;
  margin-bottom: 10px;
}

.testimonial .testimonial-text h4 {
  color: #666666;
  font-size: 14px;
  margin-bottom: 0;
}

.testimonial .owl-dots {
  margin-top: 15px;
  text-align: center;
}

.testimonial .owl-dot {
  display: inline-block;
  margin: 0 5px;
  width: 12px;
  height: 12px;
  border-radius: 50%;
  background: rgba(256, 256, 256, 0.5);
}

.testimonial .owl-dot.active {
  background: #ffffff;
}

/*******************************/
/********* Contact CSS *********/
/*******************************/
.contact {
  position: relative;
  width: 100%;
  padding: 45px 0 15px 0;
}
.contact .detail {
  padding: 40px 20px;
  text-align: center;
  box-shadow: 0 0 10px rgb(0 0 0 / 0.2);
}
.contact .detail-icon {
  display: flex;
  align-items: center;
  justify-content: center;
  margin-bottom: 3px;
}
.contact .detail-icon i {
  font-size: 25px;
}
.contact .contact-info {
  height: 100%;
  flex-basis: 33%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.contact .contact-form {
  position: relative;
  padding: 90px 45px 90px 45px;
  /* background: #ef233c; */
  background: white;
  box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
}
.contact .row {
  margin-bottom: 30px;
}
.contact .contact-form input {
  color: #aaa;
  padding: 15px 0;
  background: none;
  border-radius: 0;
  border: none;
  border-bottom: 1px solid rgba(26, 26, 26, 0.5);
}
.contact .contact-form textarea {
  color: #aaa;
  height: 190px;
  padding: 15px 0;
  background: none;
  border-radius: 0;
  border: none;
  border-bottom: 1px solid rgba(26, 26, 26, 0.5);
  resize: none;
}
.contact .help-block ul {
  margin: 0;
  padding: 0;
  list-style-type: none;
  font-size: 14px;
  font-style: italic;
  color: #ddd;
}

/* 

.contact .container-fluid {
  background: url(../img/contact.jpg) left center no-repeat;
  background-size: contain;
}


.contact .contact-form .form-control::placeholder {
  color: #ffffff;
  opacity: 1;
}

.contact .contact-form .form-control:-ms-input-placeholder,
.contact .contact-form .form-control::-ms-input-placeholder {
  color: #ffffff;
}

.contact .contact-form .btn {
  margin-top: 35px;
  color: #ef233c;
  background: #ffffff;
  box-shadow: inset 0 0 0 50px #ffffff;
}

.contact .contact-form .btn:hover {
  color: #ffffff;
  background: transparent;
  box-shadow: inset 0 0 0 0 #ffffff;
  border-color: #ffffff;
}
} */

@media (max-width: 767.98px) {
  .contact .container-fluid {
    background: none;
  }

  .contact .contact-form {
    padding: 90px 40px;
    margin-top: 20px;
  }
  .contact .contact-info {
    gap: 15px;
  }
}

/*******************************/
/*********** Blog CSS **********/
/*******************************/
.blog {
  position: relative;
  width: 100%;
  padding: 45px 0 15px 0;
}

.blog .blog-item {
  position: relative;
  margin-bottom: 30px;
}

.blog .blog-img {
  position: relative;
  width: 100%;
  overflow: hidden;
}
/* ... */

